option java_package = "protobuf.codec.text";
option java_outer_classname = "TypesProtoBuf";

message Types{
	optional string idstring = 1;
	optional  int32 idint32 = 2;
	optional  double iddouble = 3;
	optional  float idfloat = 4;
	optional  int64 idint64 = 5;
	optional  uint32 iduint32 = 6;
	optional  uint64 iduint64 = 7;
	optional sint32 idsint32 = 8;
	optional  sint64 idsint64 = 9;
	optional  fixed32 idfixed32 = 10;
	optional  fixed64 idfixed64 = 11;
	optional  sfixed32 idsfixed32 = 12;
	optional  sfixed64 idsfixed64 = 13;
	optional  bool idbool = 14;
	optional Lang lang=15;
	optional bytes idbyte=16;
	}
	
	
message RepeatedFields{
	required int32 fieldId=1;
	repeated int32 id=2;
	repeated string names=3;
	repeated Version versions=4;
	repeated Lang langs=5;
}

enum Lang{
	JAVA=1;
	HASKELL=2;
}

message Version{
	optional string name=1;
	optional int32 vernum=2;
}

message Foo{
	optional int32 id=1;
	optional string name=2;
	extensions 100 to 200;
}

extend Foo{
	optional string alias =100;
    repeated Lang langs=101;
    repeated Version version=102;
    optional Version version1=103;
}
message Unknown{
	optional string name=1;
	optional int32 id=2;
	repeated string alias =3;
	repeated Version verions=4;
	optional Version liveversion=5;
	extensions 100 to 200;
}

extend Unknown{
	optional string othername =100;
	optional int32 otherid=101;
	repeated Lang lang=102;
	optional Version extversion=103;
	repeated Version extversions=104;
}



